# porenet

./: README.md  single_pore.m  single_pore.py
3d_10x10x10/: .single.phase.cpp.swp  3d_openpnm_simple3.py  Makefile  cmake_install.cmake  linear_solver_petsc.cpp  output.cpp  pore_diameter  pore_volume  run.sh  single.phase.cpp  single_pore_out.vtp  test_file.vtp  throat.conduit_lengths.pore1  throat.conduit_lengths.throat  throat.volume  throat_area  throat_diameter
comp_flow_steady/: CMakeCache.txt  cmake_install.cmake  incomp_flow.pvsm  linear_solver_petsc.cpp  single_pore_out.vtp  time_massflow.txt  z_avg_pressure_out.txt
comp_flow_unsteady/: 3d_openpnm_simple_gen.py  CMakeCache.txt  Makefile  cmake_install.cmake  input.txt  pressure_out.txt  run.sh  single_pore_out.vtp  sinphase  sphase_unstead12.cpp  sphase_unsteady_comp.cpp  z_avg_pressure_out.txt
examples/validation_10x10x10_100mum_openpnm/: 3d_openpnm_simple_gen.py  CMakeLists.txt  input.txt  linear_solver_petsc.cpp  single_phase_3d_water.ipynb  single_phase_3d_water.py  sinphase  sphase_unstead15.cpp  write_vtk.cpp
gen_network/: 3d_openpnm_simple2.py
gen_network/Random_Network_Generator/RandNetGen001/: RandNetGen001.sln  RandNetGen001.vcproj  ReadMe.txt
gen_network/Random_Network_Generator/RandNetGen_mod/: .~lock.Description.doc#  Description.doc  Network01.cpp  RandNetGen001.ncb  a.out  main.cpp  network01.h  run.sh
gen_network/gen_net_openpnm/test/: test_file.vtp
gen_network/in-house/: get_inhouse_network_stat.cpp
gen_network/matlab/: url
gen_network/netgen/: main.cpp  makefile  netgen_linux_x86  node.cpp  node.h  problem.cpp  problem.h  rockElem.cpp  rockElem.h
gen_network/pnetgen/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gen_network_pore.f90  pnetgen
gen_network/pnetgen/src/: sdot.f
incomp_flow/: 3d_openpnm_simple_gen.py  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  diameter_dist.py  pressure_out.txt  run.sh  single_pore_out.vtp  sinphase  sphase_unstead12.cpp  time_massflow.txt  z_avg_pressure_out.txt  zavg_pressure_gnu
incomp_flow_unsteady/: CMakeLists.txt  plot_mass.gnu  run.sh  sphase_unsteady_incomp.cpp
single_phase_1d_flow/: single_pore.cpp
single_phase_3d_flow/src/comp_flow_steady/: Makefile  linear_solver_petsc.cpp  linear_solver_petsc.h  sphase_unstead12.cpp
single_phase_3d_flow/src/comp_flow_unsteady/: linear_solver_petsc.cpp  sphase_unsteady_comp_nonuni.cpp
single_phase_3d_flow/src/comp_flow_unsteady_oo/: input.txt  linear_solver_petsc.cpp  run.sh  single_pore_links.vtp  single_pore_nodes.vtp  sphase_unsteady_comp.cpp  sphase_unsteady_comp.hpp  test.cpp  write_vtk.cpp  write_vtk.h
single_phase_3d_flow/src/comp_unsteady_micro/: 3d_openpnm_simple_gen.py  CMakeLists.txt  input.txt  linear_solver_petsc.cpp  linear_solver_petsc.h  run.sh  sinphase  sphase_unsteady_comp.cpp  write_vtk.cpp
single_phase_3d_flow/src/compressible_no_dt_no_comp/: linear_solver_petsc.cpp  linear_solver_petsc.h  sphase_unsteady_nodt_nocomp.cpp
single_phase_3d_flow/src/flow_unsteady_micro/: input.txt  linear_solver_petsc.cpp  sphase_unsteady_comp.cpp  write_vtk.cpp
single_phase_3d_flow/src/flow_unsteady_oo_oren/: .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  constants.h  input.txt  linear_solver_petsc.cpp  link.cpp  link.hpp  node.cpp  node.hpp  output.txt  pressure_out.txt  single_pore_links.vtp  sinphase  sphase_unsteady_comp.cpp  sphase_unsteady_comp_omp.cpp  sphase_unsteady_incomp.cpp  write_data.h
single_phase_3d_flow/src/flow_unsteady_oo_oren/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  linear_solver_petsc.h  single_pore_links.vtp  single_pore_nodes.vtp  sinphase  sphase_unsteady_comp.cpp  write_data.cpp
single_phase_3d_flow/src/flow_unsteady_openpnm/: CMakeLists.txt  input.txt  linear_solver_petsc.cpp  linear_solver_petsc.h  pressure_out.txt  sphase_unsteady_comp.cpp
single_phase_3d_flow/src/incomp_flow_unsteady/: CMakeLists.txt  pressure_out.txt  sphase_unsteady_incomp.cpp
single_phase_3d_flow/src/incomp_flow_unsteady_oo_oren/: constants.h  input.txt  link.cpp  link.hpp  node.cpp  node.hpp  sphase_unsteady_comp.cpp  write_data.cpp  write_data.h
single_phase_3d_flow/src/incomp_unsteady_micro/: CMakeLists.txt  input.txt  linear_solver_petsc.cpp  linear_solver_petsc.h  run.sh  sinphase  sphase_unsteady_incomp.cpp  write_vtk.cpp  write_vtk.h
single_phase_3d_flow/src/old/: CMakeLists.txt  linear_solver_petsc.cpp  linear_solver_petsc.h
single_phase_3d_flow/src/old/3d_10x10x10_openpnm/: linear_solver_petsc.cpp  output.cpp  output.h  single_phase.cpp  single_phase3d_openpnm_network.cpp  single_pore_out.txt  throat.conduit_lengths.pore2
single_phase_3d_network/: linear_solver_petsc.h  single.phase.cpp  single_phase_1d.cpp  throat_diameter
single_phase_3d_network/src/comp_flow_steady/: sinphase  test_file.vtp
single_phase_3d_network/src/comp_flow_unsteady/: sphase_unsteady_comp.cpp  write_vtk.h
single_phase_3d_network/src/compressible_no_dt_no_comp/: CMakeLists.txt  input.txt  pressure_out.txt  write_vtk.cpp
single_phase_3d_network/src/incomp_flow_unsteady/: input.txt  run.sh
single_phase_3d_network/src/old/: inputfile  pore_diameter
single_phase_3d_network/src/old/3d_10x10x10_openpnm/: CMakeLists.txt  linear_solver_petsc.h  teton
